healthcare-plus/force-app/main/default/objects/Account/fields/NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>NPI_Number__c</fullName>
    <externalId>true</externalId>
    <label>NPI Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>