healthcare-plus/force-app/main/default/objects/Account/fields/Specialties_Offered__c.field-meta.xml
<CustomField>
    <fullName>Specialties_Offered__c</fullName>
    <label>Specialties Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Emergency medicine</fullName>
            </value>
            <value>
                <fullName>Family medicine</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Allergist</fullName>
            </value>
            <value>
                <fullName>Colorectal surgery</fullName>
            </value>
            <value>
                <fullName>General Surgery</fullName>
            </value>
            <value>
                <fullName>Internal medicine</fullName>
            </value>
            <value>
                <fullName>Medical genetics</fullName>
            </value>
            <value>
                <fullName>Obstetrics and gynaecology</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Pediatric endocrinology</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Psychiatry</fullName>
            </value>
            <value>
                <fullName>Intensive care medicine</fullName>
            </value>
            <value>
                <fullName>Diagnostic Radiology</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>Hematology</fullName>
            </value>
            <value>
                <fullName>Nephrology</fullName>
            </value>
            <value>
                <fullName>Forensic pathology</fullName>
            </value>
            <value>
                <fullName>Geriatrics</fullName>
            </value>
            <value>
                <fullName>Hospice and palliative medicine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>