healthcare-plus/force-app/main/default/objects/Account/recordTypes/Laboratory_Imaging_Center.recordType-meta.xml
<RecordType>
    <fullName>Laboratory_Imaging_Center</fullName>
    <active>true</active>
    <description>For diagnostic laboratories and medical imaging facilities</description>
    <label>Laboratory/Imaging Center</label>
</RecordType>